# twentyfive-stars

./: .env.example  .gitignore  .graphqlconfig.yml  Cargo.toml  README.md  bsconfig.json  diesel.toml  package.json  relay.config.js  schema.graphql  seed.graphql
docs/: setting-up-auth0.md
graphql/: Cargo.toml
migrations/: 0001-00-00_00-00-00_types.sql  2020-05-18_05-09-51_create-nodes.sql  2020-05-18_05-10-11_create-waves.sql  2020-05-18_05-11-11_create-images.sql  2020-05-18_05-21-51_create-battle-cards.sql  2020-05-18_05-26-12_create-character-cards.sql  2020-05-18_05-27-16_create-character-modes.sql  2020-05-18_05-29-03_create-stratagem-cards.sql
migrations/00000000000002_types/: down.sql  up.sql
migrations/2019-12-11-222344_create_waves/: up.sql
migrations/2019-12-11-223819_card_type_enum/: down.sql  up.sql
migrations/2019-12-11-223819_create_cards/: down.sql  up.sql
migrations/2019-12-30-025313_card_rarity/: down.sql  up.sql
migrations/2019-12-30-030735_pgcrypto/: down.sql
migrations/2019-12-30-030829_create_cards/: up.sql
migrations/2020-01-21-055226_create_battle_cards/: down.sql  up.sql
migrations/2020-02-10-110732_create_character_modes/: down.sql  up.sql
migrations/2020-02-22-210844_create_stratagem_cards/: up.sql
migrations/2020-03-07-222737_create_pageinfo_views/: up.sql
migrations/2020-03-30-003255_global_uuid_view/: down.sql
server/: Cargo.toml  sqlx-data.json
server/migrations/: .schema.patch
server/migrations/00000000000002_types/: down.sql
server/migrations/2019-12-11-222344_create_waves/: down.sql
server/migrations/2020-01-21-055226_create_battle_cards/: up.sql
server/migrations/2020-02-10-110732_create_character_modes/: up.sql
server/migrations/2020-02-22-210844_create_stratagem_cards/: down.sql  up.sql
server/migrations/2020-03-07-222737_create_pageinfo_views/: down.sql
server/migrations/2020-03-30-003255_global_uuid_view/: up.sql
server/queries/: README.md  wave_by_id.sql
server/src/: auth.rs  data.rs  database.rs  database_schema.rs  graphql_schema.rs  main.rs  middleware.rs  request.rs  schema.rs  state.rs  user.rs
server/src/auth/: bearer_token.rs  client.rs  oauth_querystring.rs  permission.rs  state_cookie.rs
server/src/data/: alt_mode.rs  battle_card.rs  battle_icon.rs  battle_type.rs  body_mode.rs  bot_mode.rs  card.rs  card_category.rs  card_rarity.rs  character_card.rs  character_mode.rs  character_trait.rs  combiner_body_mode.rs  combiner_mode.rs  faction.rs  head_mode.rs  id.rs  image.rs  mode_type.rs  node.rs  stratagem_card.rs  upgrade_mode.rs  wave.rs
server/src/data/card/: battle_card.rs  character_card.rs  stratagem_card.rs
server/src/data/character_mode/: alt_mode.rs  body_mode.rs  bot_mode.rs  combiner_body_mode.rs  combiner_mode.rs  head_mode.rs  upgrade_mode.rs
server/src/schema/: cursor.rs  date.rs  interfaces.rs  unions.rs
spoiler/: AllCards.re  BattleCard.re  Card.re  CardCategory.re  Index.re  RelayEnv.re  Root.re  Wave.re  index.html
spoiler/__generated__/: AllCardsQuery_graphql.re  AllCardsRefetchQuery_graphql.re  AllCards_query_graphql.re  BattleCard_battleCard_graphql.re  CardCategory_card_graphql.re  Card_card_graphql.re  RootQuery_graphql.re  Wave_wave_graphql.re
src/: data.rs  database.rs  database_schema.rs  graphql_schema.rs  main.rs  models.rs  pagination.rs  schema.rs
src/data/: alt_mode.rs  battle_card.rs  battle_icon.rs  battle_type.rs  body_mode.rs  bot_mode.rs  card.rs  card_category.rs  card_rarity.rs  character_card.rs  character_mode.rs  character_trait.rs  combiner_body_mode.rs  combiner_mode.rs  faction.rs  head_mode.rs  id.rs  mode_type.rs  node.rs  stratagem_card.rs  upgrade_mode.rs  uuid_table.rs  wave.rs
src/database/: models.rs  schema.rs  types.rs
src/models/: alt_mode.rs  battle_card.rs  bot_mode.rs  card.rs  character_card.rs  character_mode.rs  wave.rs
src/schema/: card_connection.rs  card_edge.rs  cursor.rs  edge.rs  page_info.rs
