[package]
name = "twentyfive_stars"
version = "0.1.0"
authors = ["Blaine Bublitz <blaine.bublitz@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "1.0.0", features = ["postgres", "chrono", "uuidv07"] }
dotenv = "0.9.0"
juniper = { version = "0.14.1", features = ["uuid"] }
juniper_iron = "0.6.1"
iron = "0.6.1"
mount = "0.4.0"
logger = "0.4.0"
env_logger = "0.7.1"
chrono = "0.4.1"
uuid = { version = "0.7", features = ["serde", "v4"] }
