[workspace]
members = [
  "server"
]

[replace]
# Note: This won't work with new migrations because the OID's of the custom types will be different
"sqlx:0.3.5" = { git = "https://github.com/phated/sqlx", branch = "custom-types-offline" }

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
