[package]
name = "twentyfive-stars-server"
version = "0.1.0"
authors = ["Blaine Bublitz <blaine.bublitz@gmail.com>"]
edition = "2018"

[[bin]]
name = "server"
path = "src/main.rs"

[dependencies]
async-graphql = { git = "https://github.com/phated/async-graphql", branch = "master" }
async-graphql-tide = { git = "https://github.com/phated/async-graphql", branch = "master" }
async-trait = "0.1.36"
biscuit = "0.5.0-beta1"
chrono = "0.4.11"
dotenv = "0.15.0"
env_logger = "0.7.1"
envy = "0.4.1"
failure = "0.1.8"
futures = "0.3.5"
http-client = "3.0.0"
oauth2 = { git = "https://github.com/phated/oauth2-rs", branch = "main" }
serde = "1.0.114"
smol = "0.1.18"
sqlx = { git = "https://github.com/launchbadge/sqlx", branch = "master", features = ["postgres", "chrono", "uuid", "offline"] }
tide = "0.11.0"
tide-http-auth = "0.2.0"
time = "0.2.16"
uuid = { version = "0.8.1", features = ["serde", "v4"] }
